tests/ui/transmutability/primitives/numbers.current.stderr
error[E0277]: `i8` cannot be safely transmuted into `i16`
  --> $DIR/numbers.rs:64:40
   |
LL |     assert::is_transmutable::<   i8,   i16>();
   |                                        ^^^ the size of `i8` is smaller than the size of `i16`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/numbers.rs:14:14
   |
LL |     pub fn is_transmutable<Src, Dst>()
   |            --------------- required by a bound in this function
LL |     where
LL |         Dst: TransmuteFrom<Src>
   |              ^^^^^^^^^^^^^^^^^^ required by this bound in `is_transmutable`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
